--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="resources/css/style.css" rel="stylesheet" type="text/css">
+    <title>Excursion</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>Discover hidden places in the world around you</h1>
+        <a href="#">Download Excursion (Comming soon!)</a>
+    </header>    
 </body>
 </html>
