body content and new resources added

--- a/index.html
+++ b/index.html
@@ -8,10 +8,27 @@
     <title>Excursion</title>
 </head>
 
+<header>
+    <h1>Discover hidden places in the world around you</h1>
+    <a href="#">Download Excursion (Comming soon!)</a>
+</header>
+
 <body>
-    <header>
-        <h1>Discover hidden places in the world around you</h1>
-        <a href="#">Download Excursion (Comming soon!)</a>
-    </header>    
+    <section>
+        <video> 
+            <source src="resources/videos/excursion.mp4" controls>
+        </video>
+        <div>
+            <h2>Your personal travel guide</h2>
+            <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        </div>
+        <figure>
+            <img src="resources/images/camp.jpg">
+        </figure>
+        <figure>
+            <img src="resources/images/phone.png"
+        </figure>
+    </section>
+        
 </body>
 </html>
