--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <section>
-        <video> 
-            <source src="resources/videos/excursion.mp4" controls>
+        <video autoplay muted> 
+            <source src="resources/videos/excursion.mp4" type="video/mp4">
         </video>
         <div>
             <h2>Your personal travel guide</h2>
@@ -29,6 +29,7 @@
             <img src="resources/images/phone.png"
         </figure>
     </section>
+
         
 </body>
 </html>
