footer added, first version finished

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
             <img src="resources/images/phone.png"
         </figure>
     </section>
+    <footer>
+        <h2>Comming Soon for iPhone and Android</h2>
+        <a href="#">Download Excursion (Comming soon!)</a>
+        <p class="footer">&copy; Excursion</p>
+    </footer>
 
         
 </body>
