img scale fixed

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img src="resources/images/camp.jpg">
         </figure>
         <figure>
-            <img src="resources/images/phone.png"
+            <img src="resources/images/phone.png">
         </figure>
     </section>
     <footer>
